# pidgeon

./: .gitignore  Buffers.cs  Channel.cs  ChannelList.Designer.cs  ChannelList.cs  ChannelList.resx  CodingStyle.md  Commands.cs  Configuration.cs  Configuration.unix  Connections.cs  Core.cs  DataProcessor.cs  Definitions.cs  Events.cs  Extension.cs  Hooks.cs  Hyperlink.cs  IRC.cs  Ignoring.cs  ListViewColumnSorter.cs  ListViewDB.cs  Main.Designer.cs  Makefile  Makefile.in  Messages.cs  Network.cs  NetworkData.cs  NetworkMode.cs  Pidgeon.csproj  Pidgeon.make  Pidgeon.sln  PidgeonList.Designer.cs  PidgeonList.cs  PidgeonList.resx  Profiler.ruleset  Program.cs  Protocol.cs  ProtocolIrc.cs  ProtocolQuassel.cs  (+34 more)
Commands/: Commands.cs  Commands_IRC.cs  Commands_Sc.cs  Commands_Services.cs  Commands_System.cs  ExternalCommand.cs
Core/: Config_Core.cs  Connection.cs  Core.cs  Core_IO.cs  Core_Modules.cs  Eval.cs  ThreadManager.cs
Extensions/: Everything.sln  Extension.cs  HookArgs.cs  HookDefs.cs
Forms/: ChannelInfo.Designer.cs  ChannelInfo.cs  Channel_Info.Designer.cs  Channel_Info.cs  Channel_Info.resx  Channel_Window.Designer.cs  Channel_Window.cs  Channels.Designer.cs  Channels.cs  Channels.resx  ConfigFile.cs  Connection.Designer.cs  Connection.cs  Help.Designer.cs  Help.cs  Help.resources  Help.resx  Logs.Designer.cs  Logs.cs  Main.Designer.cs  Main.cs  Main.resx  MicroChat.Designer.cs  MicroChat.cs  NetworkDB.Designer.cs  NetworkDB.cs  Notification.Designer.cs  Notification.cs  OpenDCC.Designer.cs  OpenDCC.cs  Preferences.Designer.cs  Preferences.cs  Preferences.resx  (+19 more)
(+395 files in other folders)
