#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Pidgeon], [1.2], [benapetr@gmail.com])

# Checks for programs.
AC_PROG_LN_S

AC_CHECK_TOOL([MONO], [mono])
AC_CHECK_TOOL([XBUILD], [xbuild])
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
